test(integration): allow SQLite native access